--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "ejs": "1.0.0",
     "ejs-locals": "1.0.2",
     "errorhandler": "1.2.0",
-    "express": "4.12.4",
     "express-fileupload": "0.0.5",
     "file-type": "^8.1.0",
     "humanize-ms": "1.0.1",
@@ -46,6 +45,7 @@
     "tap": "^5.7.0"
   },
   "devDependencies": {
-    "browserify": "^13.1.1"
+    "browserify": "^13.1.1",
+    "express": "4.12.4"
   }
 }
