--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "tap": "^5.7.0"
   },
   "devDependencies": {
-    "browserify": "^13.1.1"
+    "browserify": "^13.1.1",
+    "express": "4.12.4"
   }
 }
